# apertium-transfer-xmlcpp

./: .gitignore  Makefile.am  Makefile.common.mk  README.md  configure.ac  leakckeck.sh
dtd/: interchunk.dtd  postchunk.dtd  transfer.dtd
samples/: intro.t1x  only_transfer.t1x  xinstr.t1x
src/: ASTBuilder.cc  ASTBuilder.h  Makefile.am  apertium-xml2cpp.cc
src/ast/: AST.cc  AST.h
src/ast-cls/: ASTNode.h
src/ast/nodes/: ASTNode.cc  ASTNode.h  ASTNode_Action.cc  ASTNode_Action.h  ASTNode_AttrItem.cc  ASTNode_AttrItem.h  ASTNode_Attributes.cc  ASTNode_Attributes.h  ASTNode_CallMacro.cc  ASTNode_CallMacro.h  ASTNode_CatItem.cc  ASTNode_CatItem.h  ASTNode_Categories.cc  ASTNode_Categories.h  ASTNode_Clip.cc  ASTNode_Clip.h  ASTNode_CodeBlock.cc  ASTNode_CodeBlock.h  ASTNode_DefAttr.cc  ASTNode_DefAttr.h  ASTNode_DefCat.cc  ASTNode_DefCat.h  ASTNode_DefVar.cc  ASTNode_DefVar.h  ASTNode_GlobalLists.cc  ASTNode_GlobalLists.h  ASTNode_GlobalMacros.cc  ASTNode_GlobalMacros.h  ASTNode_GlobalVariables.cc  ASTNode_GlobalVariables.h  ASTNode_InstrPrototype.cc  ASTNode_InstrPrototype.h  ASTNode_Instruction.cc  ASTNode_Instruction.h  ASTNode_Interchunk.cc  ASTNode_Interchunk.h  ASTNode_Let.cc  ASTNode_Let.h  ASTNode_LitTag.cc  ASTNode_LitTag.h  (+134 more)
src/comp/: CompilationContext.cc  CompilationContext.h  SymbolGenerator.cc  SymbolGenerator.h  SymbolTable.cc  SymbolTable.h  SymbolType.cc  SymbolType.h
src/error/: Error.cc  Error.h
src/include/: apertium_xml2cpp.h  gen_include.sh
src/misc/: StringUtil.cc  StringUtil.h
src/parsing/: XMLNode.cc  XMLNode.h  XMLParser.cc  XMLParser.h  XMLTree.cc  XMLTree.h  XMLUtil.cc  XMLUtil.h
