include $(top_srcdir)/Makefile.common.mk

AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS = apertium-xml2cpp
apertium_xml2cpp_SOURCES = \
  apertium-xml2cpp.cc \
  misc/StringUtil.cc \
  parsing/XMLUtil.cc \
  parsing/XMLTree.cc \
  parsing/XMLParser.cc \
  parsing/XMLNode.cc \
  ast/nodes/ASTNode.cc \
  ast/nodes/Root.cc \
  ast/nodes/Stage.cc \
  ast/nodes/Interchunk.cc \
  ast/nodes/Postchunk.cc \
  ast/nodes/Transfer.cc \
  ast/nodes/GlobalVariables.cc \
  ast/nodes/GlobalLists.cc \
  ast/nodes/GlobalMacros.cc \
  ast/nodes/Categories.cc \
  ast/nodes/Attributes.cc \
  ast/nodes/Macro.cc \
  ast/nodes/CodeBlock.cc \
  ast/nodes/Rules.cc \
  ast/nodes/Rule.cc \
  ast/nodes/Statement.cc \
  ast/nodes/Condition.cc \
  ast/nodes/CallMacro.cc \
  ast/nodes/And.cc \
  ast/nodes/Or.cc \
  ast/nodes/Not.cc \
  ast/nodes/LValue.cc \
  ast/nodes/RValue.cc \
  ast/nodes/VariableBase.cc \
  ast/nodes/Variable_LValue.cc \
  ast/nodes/Variable_RValue.cc \
  ast/nodes/Equal.cc \
  ast/nodes/SubstrCmp.cc \
  ast/nodes/Choose.cc \
  ast/nodes/Let.cc \
  ast/nodes/ClipBase.cc \
  ast/nodes/Clip_LValue.cc \
  ast/nodes/Clip_RValue.cc \
  ast/nodes/Lit.cc \
  ast/nodes/Append.cc \
  ast/nodes/Out.cc \
  ast/nodes/B.cc \
  ast/nodes/Lu.cc \
  ast/nodes/Mlu.cc \
  ast/nodes/ModifyCase.cc \
  ast/AST.cc \
  error/Error.cc
